--- a/small-talk/JavaMongoChatApp/docker-compose.yml
+++ b/small-talk/JavaMongoChatApp/docker-compose.yml
@@ -1,14 +1,30 @@
 version: '3'
 services:
   mongo:
-    container_name: mongo
-    image: mongo:latest
+    image: mongo:6.0.7
     environment:
       - AUTH=yes
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-      - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+      - MONGO_INITDB_DATABASE=javamongo
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - C:\doannh\STS\remove-me\mongo:/data/db
     ports:
-      - ${MONGO_PORT}:${MONGO_PORT}
+      - "27018:27017"
+  #MinIO
+  minio:
+    image: bitnami/minio:2023
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: root
+      MINIO_ROOT_PASSWORD: root@123123
+      BITNAMI_DEBUG: true
+      MINIO_SERVER_ACCESS_KEY: ATBBadVcwJrGTCF49vCkz7EzSZx3A2D8A2D4
+      MINIO_SERVER_SECRET_KEY: ATBBadVcwJrGTCF49vCkz7EzSZx3A2D8A2D4
+      MINIO_DISTRIBUTED_MODE_ENABLED: no
+      MINIO_DEFAULT_BUCKETS: "e-small-talk"
+    volumes:
+      - C:\doannh\STS\remove-me\minio:/data
