--- a/small-talk/JavaMongoChatApp/src/main/resources/application.properties
+++ b/small-talk/JavaMongoChatApp/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.servlet.context-path=/api
 
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
+spring.data.mongodb.username=root
 spring.data.mongodb.password=root
 spring.data.mongodb.database=javamongo
-spring.data.mongodb.port=27017
+spring.data.mongodb.port=27018
 spring.data.mongodb.host=localhost
 
 jwt.secret=nhutnguyenvippro
