Adding the api for creating a product

--- a/JavaMySql/src/main/resources/application.properties
+++ b/JavaMySql/src/main/resources/application.properties
@@ -18,3 +18,9 @@ jwt.token.validity=3600
 
 # for swagger2
 spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
+
+
+logging.level.ROOT=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
