--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,14 +37,17 @@
     "default_environment": "prod"
   },
   "dependencies": {
-    "@angular/common": "16.1.4",
-    "@angular/compiler": "16.1.4",
-    "@angular/core": "16.1.4",
-    "@angular/forms": "16.1.4",
-    "@angular/localize": "16.1.4",
-    "@angular/platform-browser": "16.1.4",
-    "@angular/platform-browser-dynamic": "16.1.4",
-    "@angular/router": "16.1.4",
+    "@angular/animations": "16.2.7",
+    "@angular/cdk": "^16.2.6",
+    "@angular/common": "16.2.7",
+    "@angular/compiler": "16.2.7",
+    "@angular/core": "16.2.7",
+    "@angular/forms": "16.2.7",
+    "@angular/localize": "16.2.7",
+    "@angular/material": "^16.2.6",
+    "@angular/platform-browser": "16.2.7",
+    "@angular/platform-browser-dynamic": "16.2.7",
+    "@angular/router": "16.2.7",
     "@fortawesome/angular-fontawesome": "0.13.0",
     "@fortawesome/fontawesome-svg-core": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
@@ -66,9 +69,9 @@
     "@angular-builders/jest": "16.0.0",
     "@angular-devkit/build-angular": "16.1.4",
     "@angular-eslint/eslint-plugin": "16.0.2",
-    "@angular/cli": "16.1.4",
-    "@angular/compiler-cli": "16.1.4",
-    "@angular/service-worker": "16.1.4",
+    "@angular/cli": "16.2.4",
+    "@angular/compiler-cli": "16.2.7",
+    "@angular/service-worker": "16.2.7",
     "@types/jest": "29.5.3",
     "@types/node": "18.16.19",
     "@typescript-eslint/eslint-plugin": "5.61.0",
